# AutonomousDrone

./: .gitignore  README.md
DockerFiles/: README.md  dockerfile
csm/: README.md
custom_plicp/: CMakeLists.txt  README.md  package.xml
custom_plicp/include/custom_plicp/: Math.h  karto_tools.h  scan_matcher.h
custom_plicp/launch/: demo.launch  rplidar.launch
custom_plicp/src/: scan_matcher.cpp
g_mapper/: CMakeLists.txt  package.xml
g_mapper/include/octomap_generator/: octomap_generator.h  (+1 more)
g_mapper/scripts/: octomap_generator_node.cpp
mavros_test/: CMakeLists.txt  package.xml
mavros_test/scripts/: offb_node.cpp  offb_node_py.py
px4_files/: building1.world  if750a.sdf  if750a.urdf  mavros_posix_sitl.launch  posix_sitl.launch  setup_env.bash
robot_setup_tf/: CMakeLists.txt  frames.gv  package.xml
robot_setup_tf/launch/: demo_launch.launch
robot_setup_tf/scripts/: Untitled-1  gazebo_link_pose_publisher.cpp  uav_tf_broadcaster.cpp
sensors/velodyne_depricated/: CMakeLists.txt  vel.cc  velodyne.world  velodyne_plugin.cc
sensors/velodyne_simulator/velodyne_description/: CMakeLists.txt
sensors/velodyne_simulator/velodyne_description/launch/: example_vlp.launch
sensors/velodyne_simulator/velodyne_description/models/velodyne_VLP16/: model.config  velodyne_VLP16.sdf
sensors/velodyne_simulator/velodyne_description/rviz/: visualize_pointcloud_px4.rviz
sensors/velodyne_simulator/velodyne_description/urdf/: example.urdf  example.urdf.xacro  top_level_xacro.xacro
sensors/velodyne_simulator/velodyne_description/world/: example_sdf.world
(+4 files in other folders)
